# hololux-demo

./: CMakeLists.txt  EGLHelper.cpp  EGLHelper.h  EGLHelperTest.cpp  HololuxScreenshot.cpp  HololuxScreenshot.h  HololuxScreenshotBuildTest.cpp  HololuxScreenshotTest.cpp  IHololuxScreenshot.h  MineolaHelper.cpp  MineolaHelper.h  MineolaHelperTest.cpp  README.dev.md  README.md  collect_depends.py  setup_ubuntu16.04.sh
.github/workflows/: cmake.yml
dependencies/: CMakeLists.txt  conanfile.txt
dependencies/include/: HololuxRenderer.h  NetworkInterface.h
dependencies/include/glm/simd/: platform.h
dependencies/lib/: libjpeg.so.8.2.2  libturbojpeg.so.0.2.0
